[package]
name = "number_range"
version = "0.1.0"
edition = "2021"
description = "Library to parse list of numbers from human readable string"
repository = "https://github.com/Atreyagaurav/number_range"
homepage = "https://github.com/Atreyagaurav/number_range"
license-file = "LICENSE"
readme = "README.md"
keywords = ["parsing", "numbers", "iterators"]
categories = ["parsing", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[dev-dependencies]
rstest = "0.16.0"
