[package]
name = "number_range"
version = "0.3.2"
edition = "2021"
description = "Library to parse list of numbers from/to human readable string"
repository = "https://github.com/Atreyagaurav/number_range"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["parsing", "numbers", "iterators"]
categories = ["parsing", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
num = "0.4.0"

[dev-dependencies]
rstest = "0.16.0"
